<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dark"
    android:scrollbars="none"
    tools:context=".fragment.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/bg_dark" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:src="@drawable/img_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/register_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:textColor="@color/white_60"
            android:text="@string/register_desc" />

        <EditText
            android:id="@+id/et_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:hint="@string/edittext_hint_fullname"
            android:drawableStart="@drawable/baseline_person_24"
            android:inputType="text"
            style="@style/InputFieldStyle"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/edittext_hint_email"
            android:drawableStart="@drawable/baseline_email_24"
            android:layout_marginHorizontal="16dp"
            android:inputType="textEmailAddress"
            style="@style/InputFieldStyle" />

        <EditText
            android:id="@+id/et_nim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/edittext_hint_nim"
            android:drawableStart="@drawable/baseline_numbers_24"
            android:layout_marginHorizontal="16dp"
            android:inputType="text"
            style="@style/InputFieldStyle"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/edittext_hint_password"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawableEnd="@drawable/baseline_remove_red_eye_24"
            android:layout_marginHorizontal="16dp"
            android:inputType="textPassword"
            style="@style/InputFieldStyle" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/edittext_hint_confirm_password"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawableEnd="@drawable/baseline_remove_red_eye_24"
            android:layout_marginHorizontal="16dp"
            android:inputType="textPassword"
            style="@style/InputFieldStyle" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/register"
            app:backgroundTint="@null"
            style="@style/ButtonPrimaryStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_60"
                android:textSize="14sp"
                android:text="@string/tv_already_have_account" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textColor="@color/white_60"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/tv_login" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
